# NetStatus-API-rs

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: release.yml
src/: api.rs  config.rs  main.rs
