[package]
name = "NetStatus-API-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2"
actix-limitation = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "signal"] }
validator = { version = "0.20", features = ["derive"] }
config = "0.15"
governor = "0.10.0"
